--- a/styles.css
+++ b/styles.css
@@ -116,3 +116,42 @@ input[type="text"],input[type="email"], input[type="password"] {
     border-radius: 10px; /* Ronde hoeken voor de container */
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3); /* Schaduw voor diepte-effect */
 }
+
+.error-message {
+    color: #ff3333; /* Rood voor fouten */
+    background-color: #ffe6e6; /* Lichte achtergrond */
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px 0;
+    font-size: 14px;
+}
+
+.success-message {
+    color: #4CAF50; /* Groen voor succes */
+    background-color: #e6ffe6; /* Lichte achtergrond */
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px 0;
+    font-size: 14px;
+}
+.home-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 10px 0;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.home-button i {
+    margin-right: 8px; /* Geeft ruimte tussen het icoon en de tekst */
+}
+
+.home-button:hover {
+    background-color: #45a049;
+}
+
